css/lazy-load.css
.lazy-load__button {
  display: block;
  width: 200px;
  margin: auto;
  height: 50px;
  color: #58595B;
  font-size: 16px;
  font-weight: 600;
  margin-top: 2em;
  background: #e6e6e6;
  border: 0;
  border-radius: 4px;
  text-transform: unset;
  transition: all 0.3s;
  background-color: #58a54b;
  color: #fff;
}
.lazy-load__button:hover {
}
.lazy-load__button:focus {
  outline: 0;
}

